<resources>
    <string name="app_name">Fencing Pool and Score</string>
    <string name="button_runpool">Run Pool</string>
    <string name="label_newpool">Please create a new pool</string>
    <string name="save_pool">Save</string>
    <string name="label_newpoolname">Pool Name:</string>
    <string name="text_newpoolname">Pool Name e.g. Y12MF Pool 1</string>
    <string name="label_poolsize">Pool Size:</string>
    <string name="text_poolsize">Pool Size</string>
    <string name="title_newpool">New Pool</string>
    <string name="text_pool">Pool</string>
    <string name="text_ok">OK</string>
    <string name="help">Help</string>
    <string name="start_bout">Start Bout</string>
    <string name="text_bout_no">Bout No</string>
    <string name="text_fencer_right">Fencer On Right</string>
    <string name="text_score">Score</string>
    <string name="text_fencer_left">Fencer On Left</string>
    <string name="text_fencer">Fencer</string>
    <string name="Inc_Symbol">+</string>
    <string name="Dec_Symbol">-</string>
    <string name="Start_Stop">Start</string>
    <string name="Reset_Timer">Reset Timer</string>
    <string name="Set_Time">Set\nTime</string>
    <string name="Send">Send</string>
    <string name="Double">Double</string>
    <string name="Yellow_Card">Y</string>
    <string name="Red_Card">R</string>
    <string name="P_Card">P</string>
    <string name="Reset_All">Reset\nAll</string>
    <string name="Reset_Score">Reset Score</string>
    <string name="text_stop">Stop</string>
    <string name="text_start">Start</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_seconds">Seconds</string>
    <string name="title_priority">Priority</string>
    <string name="title_end_bout">End Bout</string>
    <string name="text_set_time">Set Time</string>
    <string name="title_switch_fencer">Switch Fencer</string>
    <string name="title_bout_appbar">Fencer %1$d(L) - %2$d(R)</string>
    <string name="Create_Bout">Create Standalone Bout</string>
    <string name="text_priority_desc">The priority is on the %s.</string>
    <string name="text_left">LEFT</string>
    <string name="text_right">RIGHT</string>
    <string name="text_please_wait">Please wait ...</string>
    <string name="text_max_scores">Maximum Touches:</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="p_card">P Card</string>
    <string name="p_yellow">P Yellow</string>
    <string name="p_red">P Red</string>
    <string name="p_black">P Black</string>
    <string name="black_card">Black Card</string>
    <string name="text_change_scores">Change Scores</string>
    <string name="text_help_pool">You can create a new pool from the option menu.\n\nThe first table is the pool score table and the second one is the pool bouting order table.\n\nYou can press and hold on each bout in the bouting order table to start a new pool bout. Following USA Fencing convention, the first fencer will be fencing on the right and the second fencer will be fencing on the left. You can swap the sides of the fencers once the bout is created.\n\nUpon exiting the bout, you will be prompted to save the score of your bout where it will be displayed on both the pool table and the bouting order table. \nBy clicking Yes, you save the result of the bout and exit. \nBy clicking No, you exit without saving the result. \nBy clicking Cancel, you return back to the bout.\n\nOnce you have entered in the result of a bout, you will be able to change the score by pressing and holding on that particular bout in the bouting order table. In the case where the scores are tied, the victory will be assigned to the fencer with the priority. You can also change who the victor is with the change score feature.\n\nTo zoom in/out, you can pinch or double tap on the screen.</string>
    <string name="text_help_bout">From the top to the bottom, there are the timer, the score box, the card records, the score buttons, the timer start/stop button, and the reset buttons. In the last second, the timer will display the tenths of a second.\n\nThe score box is touchable. Tapping the score will increment it while tapping the colon sign will be a double touch. You can also tap the score buttons to update them.\n\nThe yellow and red card records are toggle switches. The P cards (for non-combativity) will toggle through P1, P2, P3, and P4. Recording red card or P-red card by itself will not change the score.\n\nThe reset buttons are disabled when the timer is running.\n\nThe option menu provides access to the priority dialog and to show various cards. If the priority is set, the score will be underlined for the side with the priority. For pool bouts, there is an option to switch the sides of the fencers.</string>
</resources>
