<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_newpoolname" />

    <EditText
        android:id="@+id/text_poolname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_newpoolname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="32" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_poolsize" />

    <Spinner
        android:id="@+id/spinner_poolsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_max_scores" />

    <EditText
        android:id="@+id/text_max_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="5"
        android:importantForAutofill="no"
        android:inputType="number" />
</android.widget.LinearLayout>