<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bout_background"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".CreateRegBout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#A6757C88"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/incScore1"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif-medium"
        android:hapticFeedbackEnabled="true"
        android:onClick="incScore"
        android:text="@string/Inc_Symbol"
        android:textColor="#4cbb17"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/decScore1"
        app:layout_constraintBottom_toTopOf="@+id/start_stop_guideline"
        app:layout_constraintEnd_toStartOf="@+id/decScore1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/decScore1"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif-medium"
        android:hapticFeedbackEnabled="true"
        android:onClick="decScore"
        android:text="@string/Dec_Symbol"
        android:textColor="#d21f04"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/decScore2"
        app:layout_constraintBottom_toTopOf="@+id/start_stop_guideline"
        app:layout_constraintEnd_toStartOf="@+id/decScore2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/incScore1"
        app:layout_constraintTop_toBottomOf="@+id/p1"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/decScore2"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif-medium"
        android:hapticFeedbackEnabled="true"
        android:onClick="decScore"
        android:text="@string/Dec_Symbol"
        android:textColor="#d21f04"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/incScore2"
        app:layout_constraintBottom_toTopOf="@+id/start_stop_guideline"
        app:layout_constraintEnd_toStartOf="@+id/incScore2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decScore1"
        app:layout_constraintTop_toBottomOf="@+id/p2"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/incScore2"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif-medium"
        android:hapticFeedbackEnabled="true"
        android:onClick="incScore"
        android:text="@string/Inc_Symbol"
        android:textColor="#4cbb17"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_stop_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decScore2" />

    <Button
        android:id="@+id/startStop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/start_button"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:maxLines="1"
        android:onClick="startStop"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/Start_Stop"
        android:textColor="#0e0e10"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/setTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_stop_guideline"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/resetAll"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif"
        android:hapticFeedbackEnabled="true"
        android:onClick="onResetAll"
        android:text="@string/Reset_All"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetScore"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetScore"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif"
        android:hapticFeedbackEnabled="true"
        android:onClick="onResetScore"
        android:text="@string/Reset_Score"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/resetAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetTimer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetAll" />

    <Button
        android:id="@+id/resetTimer"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif"
        android:hapticFeedbackEnabled="true"
        android:onClick="onResetTimer"
        android:text="@string/Reset_Timer"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/resetAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetScore" />

    <Button
        android:id="@+id/setTime"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif"
        android:onClick="setTimer"
        android:text="@string/Set_Time"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/resetAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetTimer"
        app:layout_constraintTop_toBottomOf="@+id/startStop"
        app:layout_constraintVertical_weight="50" />

    <Button
        android:id="@+id/double_touch"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/default_button"
        android:fontFamily="sans-serif"
        android:hapticFeedbackEnabled="true"
        android:onClick="doubleTouch"
        android:text="@string/Double"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/start_stop_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="TextView"
        android:textColor="#111111"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scoreFormattedDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="100sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bout_toolbar"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/scoreFormattedDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:maxLines="1"
        android:text="TextView"
        android:textColor="#0e0e10"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/score_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="100sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/yellow1"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/yellowcard_button_untoggled"
        android:hapticFeedbackEnabled="true"
        android:onClick="toggleYellow"
        android:text="@string/Yellow_Card"
        android:textColor="#D1A90C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/red1"
        app:layout_constraintEnd_toStartOf="@+id/red1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/p1"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/default_button"
        android:hapticFeedbackEnabled="true"
        android:onClick="incP"
        android:text="@string/P_Card"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/p2"
        app:layout_constraintEnd_toStartOf="@+id/p2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/red1" />

    <Button
        android:id="@+id/red1"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/redcard_button_untoggled"
        android:hapticFeedbackEnabled="true"
        android:onClick="toggleRed"
        android:text="@string/Red_Card"
        android:textColor="#D21F3C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/p1"
        app:layout_constraintEnd_toStartOf="@+id/p1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yellow1" />

    <Button
        android:id="@+id/p2"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_button"
        android:hapticFeedbackEnabled="true"
        android:onClick="incP"
        android:text="@string/P_Card"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/red2"
        app:layout_constraintEnd_toStartOf="@+id/red2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/p1"
        app:layout_constraintTop_toBottomOf="@+id/scoreFormattedDisplay" />

    <Button
        android:id="@+id/red2"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/redcard_button_untoggled"
        android:hapticFeedbackEnabled="true"
        android:onClick="toggleRed"
        android:text="@string/Red_Card"
        android:textColor="#D21F3C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/yellow2"
        app:layout_constraintEnd_toStartOf="@+id/yellow2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/p2" />

    <Button
        android:id="@+id/yellow2"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/yellowcard_button_untoggled"
        android:hapticFeedbackEnabled="true"
        android:onClick="toggleYellow"
        android:text="@string/Yellow_Card"
        android:textColor="#D1A90C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/red2"
        app:layout_constraintTop_toBottomOf="@+id/score_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/score_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_stop_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.725" />

</androidx.constraintlayout.widget.ConstraintLayout>